--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+
+SET(CMAKE_CXX_STANDARD 11)
+
+ADD_SUBDIRECTORY(googletest)
 
 project(TextRPG)
 
@@ -14,3 +18,6 @@ ADD_EXECUTABLE(game
 ADD_EXECUTABLE(test
     test/unit_test.cpp
 )
+
+TARGET_LINK_LIBRARIES(test gtest)
+TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
