Integrating Scene into main.cpp and debugging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ ADD_EXECUTABLE(game
     src/Characters/Character.cpp
     src/Items/Item.cpp
     src/Items/Healing.cpp
+    src/Scene/scene.cpp
+    src/Scene/eventscene.cpp
 )
 
 ADD_EXECUTABLE(test
