Minor fixes to the print function and includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ ADD_EXECUTABLE(game
 
 ADD_EXECUTABLE(test
     tests/unit_test.cpp
+    src/Menu/Main_Menu.cpp
     src/Scene/scene.cpp
     src/Scene/eventscene.cpp
     src/Characters/Character.cpp
@@ -39,6 +40,7 @@ ADD_EXECUTABLE(shop
     src/Menu/Menu.cpp
     src/Menu/Shop_Menu.cpp
     src/Characters/Character.cpp
+    src/Characters/Farmer.cpp
     src/Items/Item.cpp
     src/Items/Healing.cpp
     src/Items/Armor.cpp
